<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:src="@drawable/logo_noteport"
            android:layout_weight=".2"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fondo_menu"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/bg_main"
            android:layout_weight=".8">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/bienvenida"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/fondo_menu" />

            <Button
                android:id="@+id/btn_reporte"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_marginTop="50dp"
                android:backgroundTint="@color/white"
                android:text="@string/Crear_reporte"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <Button
                android:id="@+id/btn_completados"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/white"
                android:text="@string/Reportes_completados"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_reporte" />

            <Button
                android:id="@+id/btn_cerrar"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/white"
                android:text="@string/cerrar_sesion"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btn_completados" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>