<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:src="@drawable/logo_noteport"
            android:layout_weight=".2"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fondo_menu"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/bg_main"
            android:layout_weight=".8">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/iniciar_sesion"
                android:textColor="@color/white"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/fondo_menu" />

            <TextView
                android:id="@+id/txt_usuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="40dp"
                android:text="@string/usuario"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <EditText
                android:id="@+id/edt_usuario"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:hint="@string/usuario"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/hint"
                android:textColor="@color/black"
                android:paddingStart="5dp"
                android:inputType="textEmailAddress"
                app:layout_constraintTop_toBottomOf="@+id/txt_usuario"
                tools:layout_editor_absoluteX="40dp" />

            <TextView
                android:id="@+id/txt_contrasenia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:text="@string/Contrasenia"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_usuario"/>

            <EditText
                android:id="@+id/edt_contrasenia"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@color/white"
                android:hint="@string/Contrasenia"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/hint"
                android:textColor="@color/black"
                android:paddingStart="5dp"
                android:inputType="textPassword"
                app:layout_constraintTop_toBottomOf="@+id/txt_contrasenia"
                tools:layout_editor_absoluteX="40dp" />

            <TextView
                android:id="@+id/txt_registro"
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="¿No tienes cuenta? Registrate"
                android:textColor="@color/fondo_boton"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/edt_contrasenia" />

            <Button
                android:id="@+id/btn_completados"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_marginTop="40dp"
                android:backgroundTint="@color/white"
                android:text="@string/iniciar_sesion"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_registro"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>